// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render all recipe fields when showDetails is true 1`] = `
<div
  class="pure-u-1 pure-u-md-1-3"
>
  <div
    class="recipe-card"
  >
    <div
      class="header"
    >
      <i
        class="far fa-star fa-2x"
        data-testid="favorite-badge"
      />
      <h3
        class="name"
      >
        Beans and rice
      </h3>
    </div>
    <img
      class="thumbnail"
      alt="Beans and rice"
    />
    <div
      class="time-container"
    >
      <strong
        class="time-label"
      >
        Cook time:
      </strong>
      <p
        class="time-value"
      >
        5 minutes
      </p>
    </div>
    <div
      class="time-container"
    >
      <strong
        class="time-label"
      >
        Prep time:
      </strong>
      <p
        class="time-value"
      >
        10 minutes
      </p>
    </div>
    <div
      class="time-container"
    >
      <strong
        class="time-label"
      >
        Total time:
      </strong>
      <p
        class="time-value"
      >
        20 minutes
      </p>
    </div>
    <h4>
      Ingredients
    </h4>
    <ul>
      <li>
        1 can black beans
      </li>
      <li>
        1 cup basmati rice
      </li>
    </ul>
    <h4>
      Instructions
    </h4>
    <ol>
      <li>
        microwave ingredients
      </li>
      <li>
        eat food
      </li>
    </ol>
  </div>
</div>
`;

exports[`it should render the main recipe fields 1`] = `
<div
  class="pure-u-1 pure-u-md-1-3"
>
  <div
    class="recipe-card"
  >
    <div
      class="header"
    >
      <i
        class="far fa-star fa-2x"
        data-testid="favorite-badge"
      />
      <h3
        class="name"
      >
        Beans and rice
      </h3>
    </div>
    <img
      class="thumbnail"
      alt="Beans and rice"
    />
    <div
      class="time-container"
    >
      <strong
        class="time-label"
      >
        Cook time:
      </strong>
      <p
        class="time-value"
      >
        5 minutes
      </p>
    </div>
    <div
      class="time-container"
    >
      <strong
        class="time-label"
      >
        Prep time:
      </strong>
      <p
        class="time-value"
      >
        10 minutes
      </p>
    </div>
    <div
      class="time-container"
    >
      <strong
        class="time-label"
      >
        Total time:
      </strong>
      <p
        class="time-value"
      >
        20 minutes
      </p>
    </div>
  </div>
</div>
`;
